# Jeff

./: BLACK_BOX_OPERATOR_VALIDATION_REPORT.md  CLI_report.md  INTERFACE_REFACTOR_PROPOSAL.md  INTERNAL_LAYER_STRENGTH_REPORT.md  OPERATOR_REAL_WORLD_VALIDATION_REPORT.md  PROPOSAL_HARDENING_REPORT.md  README.md  REAL_REPO_STATE_AUDIT.md  WORK_STATUS_REALITY_DIFF.md  functionality_report.md  jeff.runtime.toml  priority_1.md  priority_2.md  priority_3.md  priority_4.md  priority_5.md  priority_6.md  pyproject.toml  refactor_report.md  run_baseline_tests.py  run_full_tests.py  run_research_example.py  run_tests.py  test_runner.py  test_step1_improvements.py  v1_report.md
.claude/: settings.local.json
PROMPTS/: PROMPT_STANDARD.md  README.md
handoffs/: WORK_STATUS_UPDATE_2026-04-15_0900.md  WORK_STATUS_UPDATE_2026-04-15_0930.md  WORK_STATUS_UPDATE_2026-04-15_1010.md
jeff/: __init__.py  bootstrap.py  main.py  runtime_persistence.py
scripts/: windows-postgres-memory-preflight.ps1
tests/: __init__.py  cli_test_helpers.py  test_acceptance_backbone_flow.py  test_action_stage_boundaries.py  test_antidrift_semantic_boundaries.py  test_cli_json_views.py  test_cli_live_run_view.py  test_cli_scope_and_modes.py  test_cli_truthfulness.py  test_evaluation_layer_alignment.py  test_evaluation_rules.py  test_execution_models.py  test_memory_models.py  test_memory_retrieval_rules.py  test_memory_truth_separation.py  test_memory_write_rules.py  test_orchestrator_failure_routing.py  test_orchestrator_handoff_validation.py  test_orchestrator_stage_order.py  test_outcome_models.py  (+1 more)
(+725 files in other folders)
