[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "jeff"
version = "0.1.0"
requires-python = ">=3.11"
readme = "README.md"
dependencies = []

[project.optional-dependencies]
postgres = ["psycopg2-binary>=2.9"]

[project.scripts]
jeff = "jeff.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
